--- a/AAGameOfLife/Other/Base.lproj/Main.storyboard
+++ b/AAGameOfLife/Other/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="A2L-6O-Grx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="20" y="20" width="335" height="547"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Zgx-iT-8px">
                                     <size key="itemSize" width="50" height="50"/>
@@ -35,17 +33,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eMm-OR-P6T">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <view contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="eMm-OR-P6T">
+                                                    <rect key="frame" x="4" y="4" width="42.5" height="42.5"/>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="eMm-OR-P6T" secondAttribute="height" id="Wom-TS-qej"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="eMm-OR-P6T" secondAttribute="trailing" id="43t-6n-Vok"/>
-                                            <constraint firstAttribute="bottom" secondItem="eMm-OR-P6T" secondAttribute="bottom" id="7D7-gh-lSw"/>
-                                            <constraint firstItem="eMm-OR-P6T" firstAttribute="leading" secondItem="zbn-ZZ-Qof" secondAttribute="leading" id="Db4-ok-mKr"/>
-                                            <constraint firstItem="eMm-OR-P6T" firstAttribute="top" secondItem="zbn-ZZ-Qof" secondAttribute="top" id="JxT-sp-Sbm"/>
+                                            <constraint firstItem="eMm-OR-P6T" firstAttribute="width" secondItem="zbn-ZZ-Qof" secondAttribute="width" multiplier="0.85" id="FQ8-Vh-dNb"/>
+                                            <constraint firstItem="eMm-OR-P6T" firstAttribute="centerX" secondItem="zbn-ZZ-Qof" secondAttribute="centerX" id="Ol1-th-gQv"/>
+                                            <constraint firstItem="eMm-OR-P6T" firstAttribute="centerY" secondItem="zbn-ZZ-Qof" secondAttribute="centerY" id="f3g-LJ-2mx"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="squareView" destination="eMm-OR-P6T" id="l0q-rT-VzE"/>
@@ -57,13 +57,30 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Ffi-qx-Bg9"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hES-y1-DBk">
+                                <rect key="frame" x="20" y="597" width="335" height="40"/>
+                                <color key="backgroundColor" red="0.59112399819999994" green="0.86035674809999996" blue="0.82454448940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="V0D-tQ-UyS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pSq-EG-TGF"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="A2L-6O-Grx" secondAttribute="bottom" id="5Ju-eh-rlc"/>
-                            <constraint firstItem="A2L-6O-Grx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="JUX-sX-LnC"/>
-                            <constraint firstAttribute="trailing" secondItem="A2L-6O-Grx" secondAttribute="trailing" id="QQN-kG-2XS"/>
-                            <constraint firstItem="A2L-6O-Grx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fOp-jz-614"/>
+                            <constraint firstItem="hES-y1-DBk" firstAttribute="leading" secondItem="A2L-6O-Grx" secondAttribute="leading" id="3Cy-ME-Qo8"/>
+                            <constraint firstItem="hES-y1-DBk" firstAttribute="trailing" secondItem="A2L-6O-Grx" secondAttribute="trailing" id="57b-tV-pJM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hES-y1-DBk" secondAttribute="bottom" constant="30" id="587-id-n5f"/>
+                            <constraint firstItem="A2L-6O-Grx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="JUX-sX-LnC"/>
+                            <constraint firstAttribute="trailing" secondItem="A2L-6O-Grx" secondAttribute="trailing" constant="20" id="QQN-kG-2XS"/>
+                            <constraint firstItem="hES-y1-DBk" firstAttribute="top" secondItem="A2L-6O-Grx" secondAttribute="bottom" constant="30" id="YNB-2N-qfb"/>
+                            <constraint firstItem="A2L-6O-Grx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fOp-jz-614"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -73,6 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="134"/>
         </scene>
     </scenes>
 </document>
